--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,19 @@ ul {
 
 /* taille des titres */
 h1 {
-	font-size: 1.2em;
+	font-size: 1.3em;
 }
 
 h2 {
-	font-size: 1.1em;
+	font-size: 1.2em;
+}
+
+h3 {
+    font-size: 1.1em;
 }
 
 /* taille autres textes */
-h3, p, span, a {
+p, a, i {
     font-size: 1em;
 }
 
@@ -61,7 +65,7 @@ nav a:hover, a:active {
   	color: #0065fc;
 }
 
-#inscription a {
+.inscription {
     color: #0065fc;
     font-weight: bold;
     padding: 30px 30px;
@@ -69,7 +73,7 @@ nav a:hover, a:active {
     text-align: center;
 }
 
-#inscription a:hover, a:active {
+.inscription:hover, :active {
     border-top: medium solid #0065fc;
 }
 
@@ -104,7 +108,6 @@ main {
     display: none;
 }
 
-/* comment supprimer la marge entre le champ et le bouton ? */
 #champ {
     border-color: #f2f2f2;
     font-weight: bold;
@@ -141,9 +144,8 @@ main {
     margin-bottom: 10px;
 }
 
-#filtres p {
+#filtres h2 {
     padding-right: 20px;
-    font-weight: bold;
 }
 
 #filtres ul {
@@ -203,7 +205,6 @@ main {
 /* ---------- section_2_hebergements ---------- */
 #section_hebergements {
     display: flex;
-    justify-content: space-between;
 }
 
 #resultats_hebergements {
@@ -214,23 +215,22 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-
 }
 
-#resultats_hebergements h1, h3 {
+#resultats_hebergements h2, h3 {
     padding-left: 25px;
     flex-basis: 100%;
 }
 
 #resultats_hebergements article {
-    width: 230px;
+    width: 250px;
     height: 190px;
     background-color: white;
     border-radius: 25px;
     border: thick white solid;
     box-shadow: 0 0 10px lightgrey;
     margin: 15px 15px 35px;
-    padding-block-end: 5px;
+    padding-block-end: 10px;
 }
 
 #resultats_hebergements article:hover {
@@ -238,17 +238,16 @@ main {
 }
 
 #resultats_hebergements article img {
-    width: 230px;
+    width: 250px;
     height: 120px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
 
-#resultats_hebergements article h2 {
+#resultats_hebergements article h3 {
     margin-bottom: 5px;
     padding-left: 10px;
     line-height: 0;
-    font-size: 1em;
 }
 
 #resultats_hebergements article p {
@@ -284,13 +283,14 @@ main {
     margin-left: 35px;
 }
 
-#resultats_populaires span {
+#populaires_titre {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 90%;
     margin: auto;
 }
+
 #resultats_populaires article {
     width: 350px;
     height: 150px;
@@ -315,17 +315,12 @@ main {
     margin-right: 10px;
 }
 
-#resultats_populaires article h2 {
+#resultats_populaires article h3 {
     margin-top: 5px;
-    font-size: 1em;
 }
 
 #resultats_populaires article p {
     font-size: 0.9em;
-    /* pour aligner les icones en bas... */
-    /*margin-bottom: 50px;*/
-    /*ça marche mais doit varier selon place restant
-    dans le container */
 }
 
 .icon {
@@ -334,10 +329,8 @@ main {
     left:140px
 }
 
-/* comment aligner les icones en bas du container ? */
-
 /* ---------- section_3_activites ---------- */
-#activites h1 {
+#activites h2 {
     display: flex;
     flex-basis: 100%;
 }
@@ -378,12 +371,12 @@ main {
     object-fit: cover;
 }
 
-.suggestion_l h2,
-.suggestion_m h2,
-.suggestion_s h2,
-.suggestion_xs h2 {
+.suggestion_l h3,
+.suggestion_m h3,
+.suggestion_s h3,
+.suggestion_xs h3 {
     padding-left: 10px;
-    font-size: 1em;
+    margin-top: 10px;
 }
 
 .suggestion_l:hover,
@@ -436,7 +429,7 @@ main {
     margin: 10px;
 }
 
-/* responsive design */
+/* ---------- responsive design ---------- */
 /* very large devices (desktops and tv) */
 @media only screen and (min-width: 2401px) {
     body {
@@ -479,7 +472,7 @@ main {
         justify-content: space-evenly;
     }
 
-    #resultats_activites_mobile h1 {
+    #resultats_activites_mobile h2 {
         padding-left: 100px;
     }
 
@@ -506,7 +499,6 @@ main {
     }
 }
 
-/* responsive design */
 /* large devices (landscape tablets and lap-desktops) */
 @media only screen and (max-width: 1200px)  {
     main {
@@ -537,7 +529,7 @@ main {
         margin-top: 25px;
     }
 
-    #resultats_hebergements h1, h3 {
+    #resultats_hebergements h2, h3 {
         padding-left: 50px;
     }
 
@@ -549,14 +541,14 @@ main {
         box-shadow: lightgray;
     }
 
-    #resultats_populaires span {
+    #populaires_titre {
         width: 100%;
         margin: 0;
         justify-content: center;
         color: white;
     }
 
-    #resultats_populaires span i {
+    #populaires_titre i {
     padding-left: 10px;
     color: white;
     }
@@ -583,7 +575,7 @@ main {
         padding-left: 5px;
     }
 
-    #resultats_populaires article h2 {
+    #resultats_populaires article h3 {
         margin-bottom:0;
         padding-left: 5px;
     }
@@ -600,7 +592,7 @@ main {
         left:5px
     }
 
-    #resultats_activites_mobile h1 {
+    #resultats_activites_mobile h2 {
         padding-left: 85px;
     }
 
@@ -655,7 +647,7 @@ main {
         align-items: center;
     }
 
-    #resultats_populaires span {
+    #populaires_titre {
         width: 75%;
     }
 
@@ -673,9 +665,8 @@ main {
         margin-bottom: 0;
     }
 
-    #resultats_populaires article h2 {
+    #resultats_populaires article h3 {
         margin-top: 5px;
-        font-size: 1em;
     }
 
     #resultats_populaires article p {
@@ -693,7 +684,7 @@ main {
         margin: 0;
     }
 
-    #footer/*_info*/ h2 {
+    #footer h2 {
         margin-block-start: 0;
         margin-block-end: 5px;
     }
@@ -717,7 +708,7 @@ main {
         align-items: center;
     }
 
-    #inscription {
+    .inscription {
         text-align: right;
         font-weight: bold;
         color: #0065fc;
@@ -751,8 +742,16 @@ main {
         border-radius: 0;
     }
 
-    #resultats_activites_mobile h1 {
+    #resultats_hebergements article {
+        margin: 15px 0;
+    }
+
+    #resultats_activites_mobile h2 {
         padding-left: 50px;
+    }
+
+    #resultats_activites_mobile h3 {
+        font-size: 0.9em;
     }
 
     #footer {
@@ -776,7 +775,7 @@ main {
         background-color: white;
     }
 
-    #resultats_populaires span {
+    #populaires_titre {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -785,7 +784,7 @@ main {
         color: black;
     }
 
-    #resultats_populaires span i {
+    #populaires_titre i {
         color: black;
     }
 
@@ -807,7 +806,7 @@ main {
         box-shadow: 0 0 10px grey;
     }
 
-    #resultats_hebergements h1, h3 {
+    #resultats_hebergements h2, h3 {
         text-align: left;
         padding-left: 40px;
     }
@@ -825,10 +824,14 @@ main {
         background-color: white;
     }
 
-    #resultats_activites_mobile h1 {
+    #resultats_activites_mobile h2 {
         text-align: left;
         padding-left: 40px;
         color: black;
+    }
+
+    #resultats_activites_mobile h3 {
+        font-size: 1.1em;
     }
 
     .suggestion_l,
