correction attribut section hebergement

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ main {
 }
 
 /* ---------- section_2_hebergements ---------- */
-#section_hebergements {
+#hebergements {
     display: flex;
 }
 
